--- a/components/src/components/navigation-tabs/navigation-tabs.scss
+++ b/components/src/components/navigation-tabs/navigation-tabs.scss
@@ -1,21 +1,93 @@
-@import '@scania/typography/dist/scss/mixins';
-@import '@scania/typography/dist/scss/tokens';
+@import "@scania/typography/dist/scss/mixins";
+@import "@scania/typography/dist/scss/tokens";
 
 .sdds-navigation-tabs {
   background-color: var(--sdds-white);
   border-bottom: 1px solid var(--sdds-grey-300);
+  position: relative;
   display: flex;
 
-  &--tab {
-    @include type-style('headline-07');
+  &-wrapper {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+    overflow-x: scroll;
+    scrollbar-width: none;
 
-    color: rgba(0, 21, 51, 0.6);
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+
+  &--forward {
+    cursor: pointer;
+    width: 48px;
+    height: 100%;
+    border: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: var(--sdds-grey-50);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+
+    &__show {
+      opacity: 1;
+      pointer-events: all;
+    }
+
+    &:hover {
+      background-color: var(--sdds-grey-300);
+    }
+
+    &:active {
+      background-color: var(--sdds-grey-400);
+    }
+  }
+
+  &--back {
+    cursor: pointer;
+    width: 48px;
+    height: 100%;
+    border: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: var(--sdds-grey-50);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+
+    &__show {
+      opacity: 1;
+      pointer-events: all;
+    }
+
+    &:hover {
+      background-color: var(--sdds-grey-300);
+    }
+
+    &:active {
+      background-color: var(--sdds-grey-400);
+    }
+  }
+
+  &--tab {
+    @include type-style("headline-07");
+
+    color: rgb(0 21 51 / 60%);
     padding: 26px 0;
     margin-right: 32px;
     text-decoration: none;
     display: block;
     position: relative;
     transition: color 0.15s ease-in-out;
+    white-space: nowrap;
 
     &:first-child {
       margin-left: 32px;
@@ -26,7 +98,7 @@
     }
 
     &::after {
-      content: ' ';
+      content: " ";
       position: absolute;
       bottom: -1px;
       right: 0;
@@ -59,7 +131,7 @@
     }
 
     &__disabled {
-      color: rgba(0, 21, 51, 0.38);
+      color: rgb(0 21 51 / 38%);
       pointer-events: none;
     }
   }
